--- a/app/assets/stylesheets/d3charts.css.scss
+++ b/app/assets/stylesheets/d3charts.css.scss
@@ -1,13 +1,13 @@
 .stratChart text {
   fill: white;
-  font: 10px sans-serif;
+  font: 11.5px sans-serif;
   text-anchor: end;
 }
 
 .stratChart {
-  margin: 20px;
-  padding: 25px;  
-  padding-left: 55px;
+  padding: 30px 0px;
+  // padding: 25px;  
+  padding-left: 70px;
   stroke: black;
   background-color: white;  
 }
